# EdgeTPU-Compiler-Log-Parser

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
edgetpu_compiler_log_parser/: edgetpu_compiler_log_parser.py
src/: edgetpu_compiler_log_parser.py
test/: multiple_model_test.py  single_model_test.py
test/model/compiled/: dummy_edgetpu.tflite  mobilenet_v2_1.0_224_inat_bird_quant_edgetpu.tflite
tests/: example.py
tests/model/: dummy.tflite
tests/model/compiled/: dummy_edgetpu.tflite
